# claude-agent-tui

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DATA_MODEL.md  IMPLEMENTATION.md  IMPROVEMENTS.md  UI_DESIGN.md
src/claude_agent_tui/: CLAUDE.md  __main__.py  demo.py  process.py  state.py
src/claude_agent_tui/discovery/: CLAUDE.md
src/claude_agent_tui/spawner/: CLAUDE.md  __init__.py  terminal.py
src/claude_agent_tui/store/: CLAUDE.md
src/claude_agent_tui/tui/: CLAUDE.md  __init__.py
src/claude_agent_tui/tui/screens/: __init__.py  new_session_screen.py  terminal_screen.py
src/claude_agent_tui/tui/widgets/: claude_terminal.py  content_viewer.py  session_list.py  tool_list.py
src/claude_agent_viz/: __init__.py  __main__.py  cli.py  demo.py  logging.py  process.py  state.py
src/claude_agent_viz/collector/: __init__.py
src/claude_agent_viz/discovery/: __init__.py  parser.py  scanner.py  watcher.py
src/claude_agent_viz/hooks/: __init__.py
src/claude_agent_viz/spawner/: __init__.py  terminal.py
src/claude_agent_viz/store/: __init__.py  models.py
src/claude_agent_viz/tui/: app.py  styles.tcss
src/claude_agent_viz/tui/screens/: __init__.py  embedded_terminal_screen.py  resume_terminal_screen.py  terminal_screen.py
src/claude_agent_viz/tui/widgets/: __init__.py  detail_panel.py  resume_terminal.py  session_list.py  session_tree.py  status_bar.py  tool_list.py
tests/: __init__.py  test_state.py
