[project]
name = "claude-agent-viz"
version = "0.1.0"
description = "Real-time terminal visualizer for Claude Code agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Vijay Sudharshan" }
]
keywords = ["claude", "agent", "visualizer", "tui", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.50.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "watchfiles>=0.21.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-textual-snapshot>=0.4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
claude-viz = "claude_agent_viz.cli:main"

[project.urls]
Homepage = "https://github.com/vijaysudharshan/claude-agent-viz"
Documentation = "https://github.com/vijaysudharshan/claude-agent-viz#readme"
Repository = "https://github.com/vijaysudharshan/claude-agent-viz"
Issues = "https://github.com/vijaysudharshan/claude-agent-viz/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_agent_viz"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
